src/main/webapp/content/scss/global.scss
/* ... */
/* ==========================================================================
entity tables helpers
========================================================================== */

/* Remove Bootstrap padding from the element
http://stackoverflow.com/questions/19562903/remove-padding-from-columns-in-bootstrap-3 */
@mixin no-padding($side) {
    @if $side == 'all' {
        .no-padding {
            padding: 0 !important;
        }
    } @else {
        .no-padding-#{$side} {
            padding-#{$side}: 0 !important;
        }
    }
}

@include no-padding('left');
@include no-padding('right');
@include no-padding('top');
@include no-padding('bottom');
@include no-padding('all');

/* bootstrap 3 input-group 100% width
http://stackoverflow.com/questions/23436430/bootstrap-3-input-group-100-width */
.width-min {
    width: 1% !important;
}

/* Makes toolbar not wrap on smaller screens
http://www.sketchingwithcss.com/samplechapter/cheatsheet.html#right */
.flex-btn-group-container {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    -webkit-justify-content: flex-end;
    justify-content: flex-end;
}

/* ==========================================================================
entity detail page css
========================================================================== */
.row.jh-entity-details > {
    dd {
        margin-bottom: 15px;
    }
}

@media screen and (min-width: 768px) {
    .row.jh-entity-details > {
        dt {
            margin-bottom: 15px;
        }
        dd {
            border-bottom: 1px solid #eee;
            padding-left: 180px;
            margin-left: 0;
        }
    }
}

/* ==========================================================================
ui bootstrap tweaks
========================================================================== */
.nav,
.pagination,
.carousel,
.panel-title a {
    cursor: pointer;
}

.datetime-picker-dropdown > li.date-picker-menu div > table .btn-default,
.uib-datepicker-popup > li > div.uib-datepicker > table .btn-default {
    border: 0;
}

.datetime-picker-dropdown > li.date-picker-menu div > table:focus,
.uib-datepicker-popup > li > div.uib-datepicker > table:focus {
    outline: none;
}

.thread-dump-modal-lock {
    max-width: 450px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

/* jhipster-needle-scss-add-main JHipster will add new css style */

.flex-global-container {
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

.flex-global-slave {
    flex-grow: 0;
}

.flex-global-master {
    display: flex;
    height: 100%;
    flex-grow: 2;
    flex-direction: row;
    justify-content: center;
    overflow: auto;
}

.flex-master {
    flex-grow: 1;
    height: 100%;
    overflow: auto;
}

.flex-container-container {
    display: flex;
    flex-wrap: wrap;
}

.ins-wrapper {
    padding: 1.5%;
    border: none;
}

html,
body {
    height: 100%;
    margin: 0;
}

#wrapper {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.flex-row-div {
    display: flex;
    flex-grow: 1;
}

.flex-column-div {
    display: flex;
    flex-direction: column;
}

.side-component {
    position: fixed;
    right: 0;
    top: 200px;
    background-color: red;
    z-index: 200;
    height: 100%;
    width: 20%;
    overflow: auto;
}

.filler {
    background-color: red;
    overflow: auto;
    height: 100%;
    width: 100%;
    display: flex;
    flex-grow: 1;
}

/* ==========================================================================
Custom network css
========================================================================== */

.network-main {
    background-color: $network-background-color;
}

/* ==========================================================================
Custom popover css
========================================================================== */
.ins-popover {
    z-index: 1000;
    position: absolute;
    background-color: $popover-background-color;

    display: flex;
    align-items: center;
    justify-content: center;

    border: rgb(65, 75, 88);
    border-radius: 1rem;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);

    color: $a-color;

    > * {
        padding: 0.3rem 1.5rem;
        flex: 1 1 auto;
        cursor: pointer;
        border-right: 1px solid rgba(65, 75, 88, 0.2);
        border-left: 1px solid rgba(65, 75, 88, 0.2);
    }

    > a:first-child,
    > span:first-child {
        border-radius: 1rem 0 0 1rem;
        border-left: none;
    }

    > a:last-child,
    > span:last-child {
        border-radius: 0 1rem 1rem 0;
        border-right: none;
    }

    > a:hover,
    > span:hover {
        background-color: $popover-button-background-color-hover;
        color: $a-color-hover;
    }
}

/* ==========================================================================
Custom global css
========================================================================== */

.selected {
    background-color: rgb(128, 255, 128) !important;
}

.selected:hover {
    background-color: rgb(128, 255, 128) !important;
}

.selected2 {
    border: 3px solid #ff0000 !important;
}

.selected2:hover {
    border: 3px solid #cc0000 !important;
}

/* ==========================================================================
Div with arrow end in css
========================================================================== */

.arrow-triangle {
    text-align: left;
    margin-top: -0.5em;
}

.arrow-triangle:before,
.arrow-triangle:after {
    content: '';
    position: absolute;
    background-color: inherit;
}

.arrow-triangle,
.arrow-triangle:before,
.arrow-triangle:after {
    width: 1em;
    height: 1em;
    border-top-right-radius: 30%;
}

.arrow-triangle.left {
    transform: rotate(-90deg) skewX(-30deg) scale(1, 0.866);
}

.arrow-triangle.right {
    transform: rotate(-30deg) skewX(-30deg) scale(1, 0.866);
}
/* ... */

